[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "social-visual-generator-core"
version = "1.0.0"
description = "Core library for generating social media infographics and carousel posts with captions using AI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Robort Gabriel", email = "your.email@example.com"}
]
keywords = ["social-media", "infographic", "carousel", "caption", "ai", "content-generation", "visual-content"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "langgraph>=1.0.0",
    "langchain>=1.2.0",
    "langchain-openai>=1.0.0",
    "langchain-core>=1.2.5",
    "playwright>=1.40.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "cairosvg==2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/robort-gabriel/social-visual-generator-core"
Documentation = "https://github.com/robort-gabriel/social-visual-generator-core#readme"
Repository = "https://github.com/robort-gabriel/social-visual-generator-core"
Issues = "https://github.com/robort-gabriel/social-visual-generator-core/issues"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
